--- a/styles/architects.css
+++ b/styles/architects.css
@@ -23,6 +23,15 @@
 .bg-light{
     background-color: rgba(255, 144, 14, 0.1);
 }
+.btn-primary{
+    background-color: #FF900E;
+    color: #FFFFFF;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+}
 
   /* Header styles */
 
@@ -32,7 +41,7 @@
     align-items: center;
   }
   .brand{
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 3rem;
   }
   .nav-item{
@@ -42,11 +51,33 @@
   .nav-link{
     text-decoration: none;
     font-size: 18px;
-    font-weight: 500px;
+    font-weight: 500;
   }
   .navbar, .banner{
     max-width: 1440px;
     margin: 0 auto;
+  }
+  /* banner related styles */ 
+
+  .banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  .banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+  }
+  .banner-img{
+    width: 100%;
+  }
+
+  /* responsive media query */
+  @media screen and (max-width: 576px){
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
   }
 
   
