--- a/styles/architects.css
+++ b/styles/architects.css
@@ -124,6 +124,20 @@ main > section{
     margin-top: 0px;
     margin-bottom: 0px;
   }
+  #experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+  }
+  #experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+  }
+  .featured-architect img{
+    width: 100%;
+  }
 
   /* Some fact related styles */
   .facts-container{
@@ -172,6 +186,7 @@ main > section{
   @media screen and (max-width: 576px){
     .navbar,
     .nav-links,
+    .features,
     .teams{
         flex-direction: column;
     }
@@ -191,11 +206,15 @@ main > section{
         justify-items: center;
         gap: 50px;
     }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
   }
 
   /* Medium size device */
   @media screen and (min-width: 576px) and (max-width: 992px){
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
     .our-features{
@@ -205,6 +224,10 @@ main > section{
         grid-template-columns: repeat(2, 1fr);
         gap: 50px;
         justify-items: center;
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
     }
     
   }
